kubernetes/apps/portainer/portainer/app/httproute.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: portainer-ui
  namespace: portainer # namespace:cluster
spec:
  hostnames:
    - "portainer.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: portainer
          namespace: portainer
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
